Fix horizontal scroll issue

--- a/css/contact.css
+++ b/css/contact.css
@@ -47,10 +47,10 @@
     border: none;
     outline: none;
 }
-.getintouch-form{
+/* .getintouch-form{
     background: #fff;
     box-shadow: 0px 0px 8px -5px;
-}
+} */
  
 
 .description .socialIcons .fa{
